test/fail/outrange-int8upper.as
let _ = intToInt8 128;
